# csv_reports

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  pytest.ini
tests/: conftest.py  test_csv_reader.py  test_integration.py  test_main.py  test_reports.py  test_table_creator.py  test_utilities.py
utils/: __init__.py  arg_parser.py  reports.py  shortcuts.py
