[project]
name = "csv-reports"
version = "0.1.0"
description = ""
authors = [
    {name = "ruki-qq",email = "ruki@duck.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich (>=14.2.0,<15.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.3.0"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
